# aya-example-lsm

./: Cargo.toml  README.md
aya-example-lsm/: Cargo.toml
aya-example-lsm-common/: Cargo.toml
aya-example-lsm-ebpf/: Cargo.toml
aya-example-lsm-ebpf/src/: main.rs
aya-example-lsm/src/: main.rs
xtask/src/: build_ebpf.rs
