[package]
name = "aya-example-lsm-ebpf"
version = "0.1.0"
edition = "2018"

[dependencies]
aya-bpf = { git = "https://github.com/vadorovsky/aya", branch = "lsm" }
aya-bpf-cty = { git = "https://github.com/vadorovsky/aya", branch = "lsm" }
# aya-bpf = { path = "../../aya/bpf/aya-bpf" }
# aya-bpf-cty = { path = "../../aya/bpf/aya-bpf-cty" }
aya-example-lsm-common = { path = "../aya-example-lsm-common" }
aya-log-ebpf = { git = "https://github.com/aya-rs/aya-log", branch = "main" }

[patch."https://github.com/aya-rs/aya"]
aya-bpf = { git = "https://github.com/vadorovsky/aya", branch = "lsm" }
# aya-bpf = { path = "../../aya/bpf/aya-bpf" }

[[bin]]
name = "aya-example-lsm"
path = "src/main.rs"

[profile.dev]
panic = "abort"
debug = 1
opt-level = 2
overflow-checks = false

[profile.release]
panic = "abort"

[workspace]
members = []
